--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -13,13 +13,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install
-        run: npm install
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
 
-      - name: Build
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
         run: npm run build
 
-      - name: FTP Deploy
+      - name: Deploy via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_SERVER }}
